<resources>
    <string name="app_name">NoteEx</string>
    <string name="notes_ex">NoteEx</string>
    <string name="search_notes">Search Notes</string>
    <string name="type_note_here">Type note here...</string>
    <string name="supporting_text">supporting_text In publishing and graphic design,</string>
    <string name="dateTime">Date Time</string>
    <string name="miscellaneous">Miscellaneous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tasks">Tasks</string>
    <string name="snackbarok">OK</string>
    <string name="storage_permission_text">This App Needs access to your Storage.</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="date">Date</string>
    <string name="notes_title">Notes Title</string>
    <string name="https">https://</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="enter_notes_here">Enter Notes Here</string>
    <string name="bottom_bar">bottom bar</string>
    <string name="mynotes">MyNotes</string>

    <string name="noteID">noteId</string>
    <string name="url_require">Url is Required</string>
    <string name="url_validation">Url is not Valid</string>
    <string name="title_require">Title is Required</string>
    <string name="empty_note_description_warning">Notes Description Must Not Be Empty</string>

    <string name="action">action</string>
    <string name="bottom_sheet_action">bottom_sheet_action</string>
    <string name="selected_color">selectedColor</string>

    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="indigo">Indigo</string>
    <string name="image">Image</string>
    <string name="webUrl">WebUrl</string>
    <string name="deleteNote">DeleteNote</string>
</resources>